src/test/deca/syntax/valid/parser/oracle/class_with_one_method4.deca
class A{
    inf f(){ int i = 0; println(i); }
}
{}