src/test/deca/syntax/invalid/parser/oracle/while_with_decl_in_expr.deca
{
	while(int i = 0;){}
}
